src/test/deca/syntax/invalid/lexer/char_8349.deca

    // Description:
    //    tests de programme lexicalement Incorrect.
    //
    // Resultats:
    //    Ligne 12 : Erreur de syntaxe. 
    //
    // Historique:
    //    cree le 09/01/2025

{
	print(₝)
}